unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/Aprobacion_Lista_de_Precios__c.object-meta.xml
<CustomObject>
    <label>Aprobación Lista de Precios</label>
    <nameField>
        <displayFormat>ALP-{00000000}</displayFormat>
        <label>Nombre de Aprobación Lista de PRecios</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aprobaciones Listas de Precios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>