unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Beneficio__c.field-meta.xml
<CustomField>
    <fullName>Beneficio__c</fullName>
    <label>%Beneficio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>