unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <label>Clase de Bonificacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>