unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Clase_de_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_Financiamiento__c</fullName>
    <formula>TEXT(Lista_de_precios__r.Clase_de_Financiamiento__c)</formula>
    <label>Clase de Financiamiento</label>
    <type>Text</type>
</CustomField>