unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Debugg__c.field-meta.xml
<CustomField>
    <fullName>Debugg__c</fullName>
    <label>Debugg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>