unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Descripci_n__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n__c</fullName>
    <formula>Lista_de_precios__r.Descripcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción</label>
    <type>Text</type>
</CustomField>