unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Estatus_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Aprobaci_n__c</fullName>
    <label>Estatus Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
            </value>
            <value>
                <fullName>En Progreso</fullName>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
                <default>true</default>
                <label>Por Aprobar</label>
            </value>
            <value>
                <fullName>ALP - Jefe Compras</fullName>
            </value>
            <value>
                <fullName>ALP - Gerente Marketing</fullName>
            </value>
            <value>
                <fullName>ALP - Gerente Comercial</fullName>
            </value>
            <value>
                <fullName>ALP - Gerente Control &amp; Desarrollo</fullName>
            </value>
            <value>
                <fullName>ALP - AEC</fullName>
            </value>
            <value>
                <fullName>ALP - Dirección Comercial</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Duplicada</fullName>
            </value>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Ya se Puede Usar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>