unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <formula>Lista_de_precios__r.Fraccionamiento__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento</label>
    <type>Text</type>
</CustomField>