unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <label>%IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>