unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Lista_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_precios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Aprobaciones Listas de Precios</relationshipLabel>
    <relationshipName>Aprobaciones_Listas_de_Precios</relationshipName>
    <type>Lookup</type>
</CustomField>