unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Mensaje_de_Error__c.field-meta.xml
<CustomField>
    <fullName>Mensaje_de_Error__c</fullName>
    <label>Mensaje de Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>