unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Monto_Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Monto_Porcentaje__c</fullName>
    <label>Monto / Porcentaje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>