unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Periodo_Fin__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Fin__c</fullName>
    <label>Periodo Fin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>