unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Periodo_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Inicio__c</fullName>
    <label>Periodo Inicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>