unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Porcentaje_Frente_a_Parque__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Frente_a_Parque__c</fullName>
    <formula>Lista_de_precios__r.Precio_frente_a_parque__c</formula>
    <label>% Frente a Parque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>