unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Porcentaje_Instalaciones__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Instalaciones__c</fullName>
    <formula>Lista_de_precios__r.Porcentaje_Precio_instalaciones__c</formula>
    <label>% Instalaciones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>