unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Porcentaje_Lado_Sol__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Lado_Sol__c</fullName>
    <formula>Lista_de_precios__r.Procentaje_Precio_lado_sol__c</formula>
    <label>% Lado Sol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>