unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Porcentaje_Lado_Sombra__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Lado_Sombra__c</fullName>
    <formula>Lista_de_precios__r.Porcentaje_Precio_lado_sombra__c</formula>
    <label>% Lado Sombra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>