unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Porcentaje_Precio_frente_rea_municipal__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Precio_frente_rea_municipal__c</fullName>
    <formula>Lista_de_precios__r.Prcentaje_Precio_frente_area_municipal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>%Precio frente área municipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>