unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Porcentaje_Precio_Superficie_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Precio_Superficie_Excedente__c</fullName>
    <label>% Precio Superficie Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>