unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Venta__c</fullName>
    <formula>Lista_de_precios__r.Precio_de_Venta__c</formula>
    <label>Precio de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>