unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_Esquina__c.field-meta.xml
<CustomField>
    <fullName>Precio_Esquina__c</fullName>
    <formula>Lista_de_precios__r.Precio_esquina__c</formula>
    <label>Precio Esquina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>