unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_Frente_a_Parque__c.field-meta.xml
<CustomField>
    <fullName>Precio_Frente_a_Parque__c</fullName>
    <formula>Lista_de_precios__r.Precio_frente_a_praque__c</formula>
    <label>Precio Frente a Parque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>