unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_frente_rea_municipal__c.field-meta.xml
<CustomField>
    <fullName>Precio_frente_rea_municipal__c</fullName>
    <formula>Lista_de_precios__r.Precio_frente_area_municipal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio frente área municipal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>