unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_Lado_Sombra__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lado_Sombra__c</fullName>
    <formula>Lista_de_precios__r.Precio_lado_sombra__c</formula>
    <label>Precio Lado Sombra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>