unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_Lista__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lista__c</fullName>
    <formula>Lista_de_precios__r.Precio_Lista__c</formula>
    <label>Precio Lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>