unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_Metro_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Precio_Metro_Excedente__c</fullName>
    <formula>Lista_de_precios__r.Precio_superficie_excedente__c</formula>
    <label>Precio Metro Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>