unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Precio_Presupuesto__c</fullName>
    <formula>Lista_de_precios__r.Precio_Presupuesto_F__c</formula>
    <label>Precio Presupuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>