unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_Sobre_Avenida__c.field-meta.xml
<CustomField>
    <fullName>Precio_Sobre_Avenida__c</fullName>
    <formula>Lista_de_precios__r.Precio_sobre_avenida__c</formula>
    <label>Precio Sobre Avenida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>