unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total__c</fullName>
    <formula>&quot;$&quot; &amp;
IF( 
  Lista_de_precios__r.Precio_Total__c &gt;= 1000000, 
  TEXT(FLOOR(Lista_de_precios__r.Precio_Total__c / 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  Lista_de_precios__r.Precio_Total__c &gt;= 1000, 
  RIGHT(TEXT(FLOOR(Lista_de_precios__r.Precio_Total__c / 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Lista_de_precios__r.Precio_Total__c)), 3) &amp; &quot;.&quot; &amp; 
IF( 
  MOD(Lista_de_precios__r.Precio_Total__c , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(Lista_de_precios__r.Precio_Total__c , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(Lista_de_precios__r.Precio_Total__c , 1), 2) * 100, 99)) 
)</formula>
    <label>Precio Total</label>
    <type>Text</type>
</CustomField>