unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <formula>Lista_de_precios__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto</label>
    <type>Text</type>
</CustomField>