unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <formula>Lista_de_precios__r.Prototipo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prototipo</label>
    <type>Text</type>
</CustomField>