unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Sobre_Avenida__c.field-meta.xml
<CustomField>
    <fullName>Sobre_Avenida__c</fullName>
    <formula>Lista_de_precios__r.Porcentaje_Precio_sobre_avenida__c</formula>
    <label>% Sobre Avenida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>