unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Solicitante__c</fullName>
    <formula>Lista_de_precios__r.CreatedBy.FirstName &amp; &quot; &quot; &amp; Lista_de_precios__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitante</label>
    <type>Text</type>
</CustomField>