unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Solicitud_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_Pendiente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitud Pendiente</label>
    <type>Checkbox</type>
</CustomField>