unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Tipo_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Registro__c</fullName>
    <formula>Lista_de_precios__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Registro</label>
    <type>Text</type>
</CustomField>