unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/UEN_para_Aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>UEN_para_Aprobaciones__c</fullName>
    <formula>Lista_de_precios__r.UEN_APROBACIONES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEN para Aprobaciones</label>
    <type>Text</type>
</CustomField>