unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/UEN_Sub_Aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>UEN_Sub_Aprobaciones__c</fullName>
    <formula>Lista_de_precios__r.Sub_UEN_Aprobaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEN Sub Aprobaciones</label>
    <type>Text</type>
</CustomField>