unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Vigente_Desde__c.field-meta.xml
<CustomField>
    <fullName>Vigente_Desde__c</fullName>
    <formula>Lista_de_precios__r.Vigente_Desde__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigente Desde</label>
    <type>Date</type>
</CustomField>