unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/fields/Vigente_Hasta__c.field-meta.xml
<CustomField>
    <fullName>Vigente_Hasta__c</fullName>
    <formula>Lista_de_precios__r.Vigente_Hasta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigente Hasta</label>
    <type>Date</type>
</CustomField>