unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/listViews/AEC_Aprobacion_Lista_de_Precios.listView-meta.xml
<ListView>
    <fullName>AEC_Aprobacion_Lista_de_Precios</fullName>
    <filterScope>Queue</filterScope>
    <label>AEC</label>
    <queue>AEC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>