unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lista_de_precios__c</columns>
    <columns>Prototipo__c</columns>
    <columns>Solicitud_Pendiente__c</columns>
    <columns>Estatus_Aprobaci_n__c</columns>
    <columns>Tipo_de_Registro__c</columns>
    <columns>Vigente_Desde__c</columns>
    <columns>Vigente_Hasta__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>