unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/listViews/Direcci_n_Comercial_Aprobacion_Lista_de_Precios.listView-meta.xml
<ListView>
    <fullName>Direcci_n_Comercial_Aprobacion_Lista_de_Precios</fullName>
    <filterScope>Queue</filterScope>
    <label>Dirección Comercial</label>
    <queue>Direccion_Comercial</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>