unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/listViews/Director_UEN_EDO_CUN_Aprobacion_Lista_de_Precios.listView-meta.xml
<ListView>
    <fullName>Director_UEN_EDO_CUN_Aprobacion_Lista_de_Precios</fullName>
    <filterScope>Queue</filterScope>
    <label>Director UEN CUN</label>
    <queue>Director_UEN_CUN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>