unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/listViews/Director_UEN_GLD_Aprobacion_Lista_de_Precios.listView-meta.xml
<ListView>
    <fullName>Director_UEN_GLD_Aprobacion_Lista_de_Precios</fullName>
    <filterScope>Queue</filterScope>
    <label>Director UEN GLD</label>
    <queue>Director_UEN_GLD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>