unpackaged/main/default/objects/Aprobacion_Lista_de_Precios__c/listViews/Gerente_Comercial_Aprobacion_Lista_de_Precios.listView-meta.xml
<ListView>
    <fullName>Gerente_Comercial_Aprobacion_Lista_de_Precios</fullName>
    <filterScope>Queue</filterScope>
    <label>Gerente Comercial NL 1</label>
    <queue>Gerente_Comercial_NL_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>